--- a/news21national/templates/n21alpha/base.html
+++ b/news21national/templates/n21alpha/base.html
@@ -38,7 +38,7 @@
 				
 				<div id="news21-menu">
 					<div class="sitetitle">
-						ASSET MANAGEMENT & SYNDICATION
+						<span class="sitetitle-highlight">A</span>SSET <span class="sitetitle-highlight">M</span>ANAGEMENT & <span class="sitetitle-highlight">S</span>YNDICATION
 					</div>
 					<div class="mininav">
 						{% if user.is_authenticated%}
@@ -64,6 +64,9 @@
 				{% block content %}{% endblock %}
 		    </div>
 			
+			<br/>
+			<div class="clear"></div>
+
 			<div class="grid_16">
 				<div id="news21-footer"></div>
 		    </div>
