--- a/news21national/templates/n21alpha/story/base.html
+++ b/news21national/templates/n21alpha/story/base.html
@@ -9,10 +9,12 @@
 
 {% block breadcrumb %}
 	<div class="grid_16 breadcrumb">
-	<a href="{% url user_dashboard %}">Dashboard</a>
-	{% for crumb in breadcrumb %}
-		 &raquo; <a href="{{ crumb.url }}" {% if forloop.last %}id="current"{% endif %} >{{ crumb.title }}</a>
-	{% endfor %}		
+		<div class="breadcrumb-trail">
+			<a href="{% url user_dashboard %}">Dashboard</a>
+			{% for crumb in breadcrumb %}
+				 &raquo; <a href="{{ crumb.url }}" {% if forloop.last %}id="current"{% endif %} >{{ crumb.title }}</a>
+			{% endfor %}
+		</div>
 	</div>
 {% endblock %}
 
