--- a/news21national/templates/n21alpha/core/dashboard.html
+++ b/news21national/templates/n21alpha/core/dashboard.html
@@ -1,37 +1,58 @@
 {% extends "core/base_main.html" %}
 {% load i18n %}
 {% load smart_if %}
+{% load inbox %}
 
 {% block content %}
 
-{% if request.GET.msg %}
-	<p class="warning">{{ request.GET.msg }}</p>
-{% endif %}
+	{% if request.GET.msg %}
+		<p class="warning">{{ request.GET.msg }}</p>
+	{% endif %}
 
 
-<div class="grid_16"><h3>Your Dashboard</h3></div>
-<div class="grid_10">
-	<h4>Recent Activity</h4>
-	{% for entry in entries %}
-	<div>
-		<span class="icon-{% if entry.status == "Approved" %}accept{% else %}exclamation{% endif %}"></span> {{ entry.status }} <a href="#">{{ entry }}</a> {{ entry.updated_at|date }} {{ entry.updated_by }}
+	<div class="grid_16"><h3>Your Dashboard</h3></div>
+	<div class="grid_8">
+		<h4>Announcements</h4>
+		{% if site_wide_announcements %}
+	        <div id="site_wide_announcements">
+	            <ul>
+	                {% for announcement in site_wide_announcements %}
+	                <li>
+	                    {{ announcement }} - <a href="{% url announcement_hide announcement.pk %}?next={{ request.path }}">[Hide]</a> <br/> {{ announcement.content }}
+	                </li>
+	                {% endfor %}
+	            </ul>
+	        </div>
+	    {% endif %}
+		<h4>Messages</h4>
+		<ul class="subnavilist">
+		    <li><a href="{% url messages_inbox %} ">{% trans "Inbox" %} ({% inbox_count %})</a></li>
+		    <li><a href="{% url messages_outbox %} ">{% trans "Sent Messages" %}</a></li>
+		    <li><a href="{% url messages_compose %} ">{% trans "New Message" %}</a></li>
+		    <li><a href="{% url messages_trash %} ">{% trans "Trash" %}</a></li>
+		</ul>
 	</div>
-	{% endfor %}
+	<div class="grid_8">
+		<h4>Your Stories <a href="{% url metastory_new %}">[+]</a></h4>
+		{% for story in stories %}
+		<div>
+			<a href="{% url metastory_edit story.id %}">{{ story }}</a>
+		</div>
+		{% endfor %}
+		{% if stories.count == 0 %}
+			<div>You have not created any stories yet.</div>
+		{% endif %}
 	
-	{% if entries.count == 0 %}
-		<div>You have not had any activity over the last 2 weeks.</div>
-	{% endif %}
-</div>
-<div class="grid_6">
-	<h4>Your Stories <a href="{% url metastory_new %}">[+]</a></h4>
-	{% for story in stories %}
-	<div>
-		<a href="{% url metastory_edit story.id %}">{{ story }}</a>
+		<h4>Recent Activity</h4>
+		{% for entry in entries %}
+		<div>
+			<span class="icon-{% if entry.status == "Approved" %}accept{% else %}exclamation{% endif %}"></span> {{ entry.status }} <a href="#">{{ entry }}</a> {{ entry.updated_at|date }} {{ entry.updated_by }}
+		</div>
+		{% endfor %}
+	
+		{% if entries.count == 0 %}
+			<div>You have not had any activity over the last 2 weeks.</div>
+		{% endif %}
 	</div>
-	{% endfor %}
-	{% if stories.count == 0 %}
-		<div>You have not created any stories yet.</div>
-	{% endif %}
-</div>
 
 {% endblock %}
