--- a/news21national/templates/n21alpha/editorsdesk/dashboard.html
+++ b/news21national/templates/n21alpha/editorsdesk/dashboard.html
@@ -3,6 +3,7 @@
 
 {% load i18n %}
 {% load smart_if %}
+{% load inbox %}
 
 
 
@@ -10,6 +11,12 @@
 <div class="grid_16"><h3>Editor's Desk</h3></div>
 <div class="grid_16">
 	<h4><a href="{% url editorsdesk_analytics %}">Analytics</a></h4>
-	
+	<h4>Messages</h4>
+	<ul class="subnavilist">
+	    <li><a href="{% url messages_inbox %} ">{% trans "Inbox" %} ({% inbox_count %})</a></li>
+	    <li><a href="{% url messages_outbox %} ">{% trans "Sent Messages" %}</a></li>
+	    <li><a href="{% url messages_compose %} ">{% trans "New Message" %}</a></li>
+	    <li><a href="{% url messages_trash %} ">{% trans "Trash" %}</a></li>
+	</ul>
 </div>
 {% endblock %}
