--- a/news21national/templates/n21alpha/api/v1/newsrooms_json.html
+++ b/news21national/templates/n21alpha/api/v1/newsrooms_json.html
@@ -1,5 +1,5 @@
 {% if callback %}{{callback}}({% endif %}{"newsrooms":[
-    {% for newsroom in newsrooms %}
-    { "id":"{{ newsroom }}" }{% if not forloop.last %},{% endif %}
+    {% for nr in newsrooms %}
+    { "id":"{{ nr }}" }{% if not forloop.last %},{% endif %}
     {% endfor %}
 ]}{% if callback %}){% endif %}
