--- a/news21national/templates/n21alpha/editorsdesk/analytics_report_alllast30days.html
+++ b/news21national/templates/n21alpha/editorsdesk/analytics_report_alllast30days.html
@@ -20,7 +20,7 @@
 
 
 {% block content %}
-<div class="grid_16"><h3>Analytics : Last 30 Days All Profiles</h3></div>
+<div class="grid_16 contentheader"><h3>Analytics : Last 30 Days All Profiles</h3></div>
 
 <div class="grid_16">
 	<div>
