--- a/news21national/templates/n21alpha/editorsdesk/analytics_report_daterange.html
+++ b/news21national/templates/n21alpha/editorsdesk/analytics_report_daterange.html
@@ -21,10 +21,11 @@
 
 
 {% block content %}
-<div class="grid_16"><h3>Analytics: Visitors By Date Range</h3></div>
+<div class="grid_16 contentheader"><h3>Analytics: Visitors By Date Range</h3></div>
 
 
 <div class="grid_16">
+	<div class="contentcontainer">
 	<div>
 		By profile, between date range ...<br/>
 		<div style="padding-left:30px;">
@@ -89,6 +90,7 @@
 	
 			<br/><br/>
 		{% endfor %}
+	</div>
 	</div>
 </div>
 
