--- a/news21national/templates/n21alpha/editorsdesk/analyticsreport.html
+++ b/news21national/templates/n21alpha/editorsdesk/analyticsreport.html
@@ -8,7 +8,7 @@
 
 
 {% block content %}
-<div class="grid_16"><h3>Analytics</h3></div>
+<div class="grid_16 contentheader"><h3>Analytics</h3></div>
 <div class="grid_16">
 {% for pdata in profiles_data %}
 	{% for chart in pdata.metrics %}
