--- a/news21national/templates/n21alpha/core/home.html
+++ b/news21national/templates/n21alpha/core/home.html
@@ -14,6 +14,7 @@
 	{% if user.is_authenticated %}
 		<h3>Welcome {{ user }},</h3>
 	{% else %}
+		 {% comment %}
 		<div class="login" style="padding-left:15px;padding-top:15px;">
 			<form id="openid_form" name="openid_form" action="{% url user_signin %}" method="post">
 			    <input type="hidden" name="action" value="verify" />
@@ -32,7 +33,8 @@
 				</fieldset>
 			</form>	
 		</div>	
-
+		{% endcomment %}
+		
 		{% block extra_styles %}
 		<link rel="stylesheet" href="{{ MEDIA_URL }}templates/n21alpha/css/openid.css" />
 		{% endblock %}
