--- a/news21national/templates/n21alpha/editorsdesk/analytics_report_firstxmonths.html
+++ b/news21national/templates/n21alpha/editorsdesk/analytics_report_firstxmonths.html
@@ -20,7 +20,7 @@
 
 
 {% block content %}
-<div class="grid_16"><h3>Analytics : First X Months ... Yearly Comparison</h3></div>
+<div class="grid_16 contentheader"><h3>Analytics : First X Months ... Yearly Comparison</h3></div>
 
 <div class="grid_16">
 	<div>
