--- a/news21national/templates/n21alpha/editorsdesk/dashboard.html
+++ b/news21national/templates/n21alpha/editorsdesk/dashboard.html
@@ -8,9 +8,21 @@
 
 
 {% block content %}
-<div class="grid_16"><h3>Editor's Desk</h3></div>
-<div class="grid_16">
+<div class="grid_16 contentheader"><h3>Editor's Desk</h3></div>
+<div class="grid_16 contentheader">
 	<h4><a href="{% url editorsdesk_analytics %}">Analytics</a></h4>
+	<h4>Announcements</h4>
+	{% if site_wide_announcements %}
+        <div id="site_wide_announcements">
+            <ul>
+                {% for announcement in site_wide_announcements %}
+                <li>
+                    {{ announcement }} : {{ announcement.creation_date|date:"M dS" }} - <a href="{% url announcement_hide announcement.pk %}?next={{ request.path }}">[Hide]</a> <br/> {{ announcement.content }}
+                </li>
+                {% endfor %}
+            </ul>
+        </div>
+    {% endif %}
 	<h4>Messages</h4>
 	<ul class="subnavilist">
 	    <li><a href="{% url messages_inbox %} ">{% trans "Inbox" %} ({% inbox_count %})</a></li>
