removed profile and messaging links temp

--- a/news21national/templates/n21alpha/base.html
+++ b/news21national/templates/n21alpha/base.html
@@ -44,7 +44,7 @@
 						{% if user.is_authenticated%}
 							<a href="{% url home %}">Home</a> | 
 							<a href="{% url user_dashboard %}">Dashboard</a> | 
-							<a href="{% url user_profile %}">Profile</a> | 
+							<!--<a href="{% url user_profile %}">Profile</a> | -->
 							<a href="{% url user_signout %}">Logout</a>
 						{% else %}
 							<a href="{% url home %}">Home</a> | 
