added totals to 2 report under analytics

--- a/news21national/templates/n21alpha/editorsdesk/analytics_report_alllast30days.html
+++ b/news21national/templates/n21alpha/editorsdesk/analytics_report_alllast30days.html
@@ -33,6 +33,28 @@
 </div>
 
 <div class="grid_16">
+	
+	<div>
+		<h4>TOTALS:</h4>
+		<table border="0" width="800" cellspacing="0" cellpadding="0">
+			<tr>
+				<td>Visitors</td>
+				<td>Visits</td>
+				<td>Pageviews</td>
+				<td>Time on Site</td>
+				<td>Bounces</td>
+				<td>New Visits</td>
+			</tr>
+			<tr>
+			{% for total in datatotals %}
+				<td>{{ total }}</td>
+			{% endfor %}
+			</tr>
+		</table>
+	</div>
+	
+	<br/>
+	
 {% for pdata in profiles_data %}
 	<h4>{{ pdata.account }}</h4>
 	<table border="0" cellspacing="5" cellpadding="5" width="800">
