--- a/news21national/templates/n21alpha/core/home.html
+++ b/news21national/templates/n21alpha/core/home.html
@@ -14,7 +14,25 @@
 	{% if user.is_authenticated %}
 		<h3>Welcome {{ user }},</h3>
 	{% else %}
-		 {% comment %}
+		<div class="grid_16 contentheader">
+		<h2>Log-In:</h2>
+		<!--<p> <a href="{% url registration_register %}">Register</a> | <a href="{% url user_signin %}">Log-In</a></p>-->
+		<div class="login">
+
+		    <form id="auth_form" name="auth_form" action="{% url user_signin %}" method="post">
+		    <input type="hidden" name="next" value="{{ next }}" />
+			<fieldset>
+
+
+				<legend>{% trans "Sign In Using Your Account ID" %}</legend>
+				<div class="form-row"><label for="id_username">{% trans "Username:" %}</label><br />{{ form2.username }}</div>
+				<div class="form-row"><label for="id_password">{% trans "Password" %}</label><br />{{ form2.password }}</div>
+
+		        <div class="submit-row"><input type="submit" name="blogin" value="{% trans "Sign in" %}"> </div>
+			</fieldset>	
+		</form>
+		</div>
+		{% comment %}
 		<div class="login" style="padding-left:15px;padding-top:15px;">
 			<form id="openid_form" name="openid_form" action="{% url user_signin %}" method="post">
 			    <input type="hidden" name="action" value="verify" />
@@ -39,7 +57,7 @@
 		<link rel="stylesheet" href="{{ MEDIA_URL }}templates/n21alpha/css/openid.css" />
 		{% endblock %}
 
-
+		{% comment %}
 		{% block extra_scripts %}
 		<script type="text/javascript" src="{{ MEDIA_URL }}templates/n21alpha/js/openid-jquery.js"></script>
 		<script type="text/javascript">
@@ -48,7 +66,8 @@
 		});
 		</script>
 		{% endblock %}
-	
+		{% endcomment %}
+		
 	{% endif %}
 
 {% endblock %}
